@@ -8,6 +8,9 @@ import sys
 import sysconfig
 import unittest
 
+@unittest.skipUnless(sys.platform == 'darwin' and
+                     sysconfig.get_config_var('WITH_NEXT_FRAMEWORK'),
+                     'unnecessary on this platform')
 class OSXEnvironmentVariableTestCase(unittest.TestCase):
     def _check_sys(self, ev, cond, sv, val = sys.executable + 'dummy'):
         with EnvironmentVarGuard() as evg:
@@ -27,9 +30,5 @@ class OSXEnvironmentVariableTestCase(unittest.TestCase):
     def test_pythonexecutable_sets_sys_executable(self):
         self._check_sys('PYTHONEXECUTABLE', '==', 'sys.executable')
 
-def test_main():
-    if sys.platform == 'darwin' and sysconfig.get_config_var('WITH_NEXT_FRAMEWORK'):
-        run_unittest(OSXEnvironmentVariableTestCase)
-
 if __name__ == "__main__":
-    test_main()
+    unittest.main()
